Fixed spacing error in project languages in Projects component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1669,7 +1669,7 @@ svg {
 
       .project-img .project-languages {
         height: 20%;
-        width: 100%;
+        width: 240%;
         display: flex;
         align-items: center;
         justify-content: space-around;
